fix bug with related post image and add some extra margin in module 034 posts list

--- a/css/modules/_m34.scss
+++ b/css/modules/_m34.scss
@@ -12,6 +12,7 @@
     }
 
     .posts-list {
+        margin-top: 40px;
         
         &__post-link {
             display: block;
